src/snapshots/interpreter__parser__tests__known_macros@only_opt_missing.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\linebreak text`"
---
stmts:
  - KnownMacro:
      name: linebreak
      args: []
      is_alt: false
  - Token: Space
  - Text: text
errors: []

