src/snapshots/interpreter__parser__tests__math@inline-2.snap
---
source: src/parser.rs
expression: ast
info: "input = `$ 1_2 $ `"
---
stmts:
  - Env:
      name: unnamed
      children:
        - Token: Space
        - Token:
            Number: "1"
        - SubScript:
            Token:
              Number: "2"
        - Token: Space
      is_alt: false
      kind: InlineMath
      start_end:
        - Token: InlineMathLimiter
        - Token: InlineMathLimiter
  - Token: Space

